	music that does not play back properly, please report it as a
	bug.

	Other changes:
	* The REJECT overflow emulation code from PrBoom+ has been
	  imported.  This fixes demo desync on some demos, although
	  others will still desync.
	* Warnings are now generated for invalid dehacked replacements of
	  printf format strings.  Some potential buffer overflows are
	  also checked.

Chocolate Doom 1.3.0 (2010-02-10):

	* Chocolate Doom now runs on Windows Mobile/Windows CE!
	* It is possible to rebind most/all of the keys that control the
	  menu, shortcuts, automap and weapon switching.  The main
	  reason for this is to support the Windows CE port and other
	  platforms where a full keyboard may not be present.
	* Chocolate Doom now includes a proper Mac OS X package; it is
	  no longer necessary to compile binaries for this system by
	  hand.  The package includes a simple graphical launcher
	  program and can be installed simply by dragging the "Chocolate
	  Doom" icon to the Applications folder. (thanks to Rikard Lang
	  for extensive testing and feedback)
	* The video mode auto-adjust code will automatically choose
	  windowed mode if no fullscreen video modes are available.
	* The zone memory size is automatically reduced on systems with
	  a small amount of memory.
	* The "join game" window in the setup tool now has an option to
	  automatically join a game on the local network.
	* Chocolate Doom includes some initial hacks for compiling under
	  SDL 1.3.
	* Recent versions of SDL_mixer include rewritten MIDI code on Mac
	  OS X.  If you are using a version of SDL_mixer with the new
	  code, music will now be enabled by default.
	* Windows Vista and Windows 7 no longer prompt for elevated
	  privileges when running the setup tool (thanks hobbs and
	  MikeRS).
	* The Windows binaries now have better looking icons (thanks
	  MikeRS).
	* Magic values specified using the -spechit command line
	  parameter can now be hexadecimal.