@@ -1,4 +1,4 @@
-AC_INIT(Strawberry Doom, 1.3.0, ghostlydeath@remood.org, strawberry-doom)
+AC_INIT(Strawberry Doom, 1.4.0, ghostlydeath@remood.org, strawberry-doom)
 
 PACKAGE_SHORTDESC="Liberal Doom source port"
 PACKAGE_COPYRIGHT="Copyright (C) 1993-2010"
